# triton-ext

./: .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml
.github/actions/build-triton/: action.yml
.github/workflows/: ci.yml  update-triton.yml
ci/: triton-hash.txt
cmake/: utils.cmake
dialect/: CMakeLists.txt  __init__.py
dialect/Example/: CMakeLists.txt  Example.cpp  Example.h  Example.td  triton-ext.conf
dialect/Example/test/: lit.local.cfg.py  zero.mlir
extensions/utlx/ops/: NewOps.cpp
extensions/utlx/python/utlx_plugin/: custom_stages.py
pass/: CMakeLists.txt  README.md
pass/LoopSplit/: LoopSplit.cpp
pass/LoopSplit/test/: loop-split.mlir
support/: CMakeLists.txt  Export.cpp  Export.h  ExportDialect.cpp  ExportPass.cpp  README.md  StringMacros.h
support/python/src/: ir.h
testing/: lit.cfg.py  lit.site.cfg.py.in
